# Lampray

./: .actrc  .gitignore  .tool-versions  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  LampFS.cpp  LampFS.h  LampMenus.cpp  LampMenus.h  README.md  VERSION  build-flatpak.sh  build.sh  com.github.chollingworth.Lampray.yml  flatpak.json  io.github.chollingworth.Lampray.desktop  lampArchiveDisplayHelper.h  lampConfig.cpp  lampConfig.h  lampFilesystem.cpp  lampFilesystem.h  lampFoMod.h  lampMenus.cpp  lampMenus.h  lampMod.h  lampUpdate.h  lampWarn.h  main.cpp  mkdocs.yml  setup.sh
.github/ISSUE_TEMPLATE/: -game--bug-report.md  bug_report.md
.github/actions/compile/: action.yml
.github/actions/setup-os/: action.yml
.github/actions/setup-tooling/: README.md  action.yml
.github/workflows/: cmake-single-platform.yml  deploy_pages.yml  pr-preview.yml  pr-title.yml  release.yml
Lamp/Base/: lampBase.h
Lamp/Control/: lampConfig.cpp  lampConfig.h  lampControl.h  lampGames.h
Lamp/Filesystem/: lampExtract.cpp  lampFS.h  lampIO.cpp  lampTrack.cpp  lampUpdate.cpp
Lamp/Menu/: lampColour.h  lampCustomise .h  lampMenu.cpp  lampMenu.h
Lamp/Parse/: lampFoMod.cpp  lampParse.h
Lampray/Base/: lampBase.h
Lampray/Control/: lampConfig.cpp  lampConfig.h  lampControl.cpp  lampControl.h  lampGames.h  lampNotification.h
Lampray/Filesystem/: lampExtract.cpp  lampFS.h  lampIO.cpp  lampShare.cpp  lampTrack.cpp  lampUpdate.cpp
Lampray/Lang/: lampLang.h
Lampray/Menu/: lampCustomise .h  lampCustomise.h  lampMenu.cpp  lampMenu.h
Lampray/Parse/: lampParse.h
bit7z/: BUILD.txt
build-aux/: README.md  com.github.chollingworth.Lampray.yml
build-aux/modules/: 50-p7zip.yml
docs/: Custom-Fonts.md  FAQ.md  Home.md  Lampray-conf.md:-Colours.md  Lampray-conf.md:-Libary-Path.md  Usage:-Baldur's-Gate-3.md  about-lampray.md  building-from-source.md  building-lampray.md  building.md  configuration.md  contributing.md  customization.md  customizing-lampray.md  directories.md  directory-structure.md  frequently-asked-questions.md  index.md  lampray-docs.md  managing-mods.md  modding-games.md  troubleshooting.md
docs/about-lampray/: bg3-mod-types.md  directories.md  mod-types.md
docs/mod-types/: baldurs-gate-3.md  baulders-gate-3.md  cyberpunk-2077.md  index.md  supported-games.md
game-data/: gameControl.h
game-data/BG3/: BG3.cpp  BG3.h
game-data/C77/: C77.cpp  C77.h
game-data/FO4/: FO4.cpp  FO4.h
game-data/LHL/: LHL.cpp  LHL.h
game-data/SSE/: SSE.cpp  SSE.h
